--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@ tbody tr:nth-child(even){
     display:flex;
     justify-content: center;
     gap: 15px;
+    align-items: center;
 }
 
 tr button{
@@ -115,6 +116,10 @@ tr button{
     border-radius: 10px;
     padding: 5px;
     font-family: 'Reddit-Mono';
+}
+
+tr button:hover{
+    cursor: pointer;
 }
 
 .deleteButton{
